# curvepress

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  conanfile.py  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-pypi.yml  release.yml  rust-clippy.yml
benches/: bench.rs
cmake/: curvepressConfig.cmake.in
conda/: meta.yaml
cpp/: CMakeLists.txt  conanfile.py
cpp/include/curvepress/: curvepress.hpp
include/: curvepress.h
include/curvepress/: curvepress.hpp
include/curvepress/detail/: codec.hpp  quantize.hpp  radial.hpp  rdp.hpp  varint.hpp  vw.hpp
python/: bindings.cpp
python/curvepress/: __init__.py
src/: capi.rs  codec.rs  error.rs  lib.rs  python.rs  quantize.rs  radial.rs  rdp.rs  varint.rs  vw.rs  wasm.rs
tests/: integration.rs
tests/cpp/: test_cpp.cpp
tests/python/: test_python.py
tests/wasm/: test_wasm.mjs
wasm/: curvepress.d.ts
